Update 0015-3sum.java