@@ -1,51 +1,31 @@
-import java.util.*;
-
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
-
-        List<List<Integer>> ans = new ArrayList<>();
-
+        List<List<Integer>>result=new ArrayList<>();
         Arrays.sort(nums);
-
-        for (int i = 0; i < nums.length - 2; i++) {
-
-            // Skip duplicate first elements
-            if (i > 0 && nums[i] == nums[i - 1]) {
+        for (int i = 0; i < nums.length-2; i++) {//in last iteration two places remain for j,k
+            if(i>0&&nums[i]==nums[i-1]){
                 continue;
             }
-
-            int left = i + 1;
-            int right = nums.length - 1;
-
-            while (left < right) {
-
-                int sum = nums[i] + nums[left] + nums[right];
-
-                if (sum == 0) {
-
-                    ans.add(Arrays.asList(nums[i], nums[left], nums[right]));
-
-                    left++;
-                    right--;
-
-                    // Skip duplicate left values
-                    while (left < right && nums[left] == nums[left - 1]) {
-                        left++;
+            int j=i+1;//left
+            int k= nums.length-1;//right
+            while(j<k){//pointers don't cross each other
+                int sum=nums[i]+nums[j]+nums[k];
+                if(sum==0){
+                    result.add(List.of(nums[i],nums[j],nums[k]));
+                    j++;
+                    k--;
+                    while(j<k&&nums[j]==nums[j-1]){//skip duplicate of j in left to right
+                        j++;
                     }
-
-                    // Skip duplicate right values
-                    while (left < right && nums[right] == nums[right + 1]) {
-                        right--;
+                    while(j<k&&nums[k]==nums[k+1]){//skip duplicate of k in right to left
+                        k--;
                     }
-
-                } else if (sum < 0) {
-                    left++;
-                } else {
-                    right--;
+                } else if (sum>0) {
+                    k--;
+                }else{
+                    j++;
                 }
             }
         }
-
-        return ans;
-    }
+       return result;}
 }
